--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "scripts": {
     "bootstrap": "lerna bootstrap",
     "clean": "rm yarn.lock && lerna clean",
-    "clean:packages": "lerna exec -- rm -rf ./node_modules && lerna exec -- rm -rf ./dev && lerna exec -- rm -rf ./package-lock.json",
+    "clean:packages": "lerna exec -- rm -rf ./node_modules && npm run clean:packages:dev",
+    "clean:packages:dev": "lerna exec -- rm -rf ./dev && lerna exec -- rm -rf ./package-lock.json",
     "format": "func() { npm run format:eslint $1 && npm run format:prettier $1 && npm run format:stylelint $1; }; func",
     "format:eslint": "func() { eslint --fix --ignore-path .eslintignore \"./packages/**/${1:-*}/**/*.{js,ts,html}\"; }; func",
     "format:package": "func() { sort-package-json \"./packages/**/${1:-*}/**/package.json\"; }; func",
@@ -32,6 +33,7 @@
     "release": "npm run bootstrap && npm run test:pre-push && lerna version --no-push",
     "standard": "standard-version",
     "test": "lerna run test --stream --concurrency 1",
+    "analyze": "lerna run analyze:doc --stream --concurrency 1",
     "test:pre-push": "npm run test -- --since",
     "test:scope": "func() { lerna run test --stream --concurrency 1 --scope @blockquote-web-components/${1}; }; func",
     "version": "npm run standard"
@@ -59,9 +61,9 @@
     "@babel/core": "^7.0.0",
     "@babel/eslint-parser": "^7.0.0",
     "@babel/eslint-plugin": "^7.0.0",
-    "@commitlint/cli": "^16.0.1",
-    "@commitlint/config-conventional": "^16.0.0",
-    "@commitlint/config-lerna-scopes": "^16.0.0",
+    "@commitlint/cli": "^17.0.2",
+    "@commitlint/config-conventional": "^17.0.2",
+    "@commitlint/config-lerna-scopes": "^17.0.2",
     "@open-wc/eslint-config": "^7.0.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
@@ -77,14 +79,14 @@
     "eslint-plugin-wc": "^1.0.0",
     "husky": "^4.0.0",
     "karma": "^6.0.0",
-    "lerna": "^4.0.0",
-    "lint-staged": "^12.0.0",
+    "lerna": "^5.0.0",
+    "lint-staged": "^13.0.1",
     "postcss": "^8.0.0",
     "prettier": "^2.0.0",
     "sort-package-json": "^1.0.0",
     "standard-version": "^9.0.0",
     "stylelint": "^14.0.0",
-    "stylelint-config-standard-scss": "^3.0.0",
+    "stylelint-config-standard-scss": "^4.0.0",
     "tslib": "^2.0.0",
     "typescript": "^4.0.0"
   }
