--- a/packages/base/blockquote-base-embedded-webview/package.json
+++ b/packages/base/blockquote-base-embedded-webview/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blockquote-web-components/blockquote-base-embedded-webview",
-  "version": "1.0.0-rc.1",
+  "version": "1.0.0",
   "description": "Webcomponent blockquote-base-embedded-webview following open-wc recommendations",
   "keywords": [
     "lit",
@@ -129,8 +129,8 @@
     "lit": "^2.0.2"
   },
   "devDependencies": {
-    "@blockquote-web-components/blockquote-base-common-dev-dependencies": "^1.0.0-rc.1",
-    "@blockquote-web-components/blockquote-foundations-sass": "^1.0.0-rc.1",
+    "@blockquote-web-components/blockquote-base-common-dev-dependencies": "^1.0.0",
+    "@blockquote-web-components/blockquote-foundations-sass": "^1.0.0",
     "@polymer/iron-test-helpers": "^3.0.1"
   },
   "publishConfig": {
