--- a/packages/foundations/blockquote-foundations-sass/package.json
+++ b/packages/foundations/blockquote-foundations-sass/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blockquote-web-components/blockquote-foundations-sass",
-  "version": "1.0.0-rc.1",
+  "version": "1.0.0",
   "description": "Set of functions and mixins which help in the development of `web-component` SCSS.",
   "keywords": [
     "sass",
