--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blockquote-web-components",
-  "version": "1.0.0-rc.1",
+  "version": "1.0.0",
   "private": true,
   "description": "Monorepo - Blockquote Web Components",
   "repository": {
