--- a/packages/controllers/blockquote-controller-rxjs/package.json
+++ b/packages/controllers/blockquote-controller-rxjs/package.json
@@ -118,35 +118,7 @@
     "rxjs": "^7.5.5"
   },
   "devDependencies": {
-    "@blockquote/rollup-plugin-total-bundlesize": "^1.0.0",
-    "@blockquote/sass-style-template": "^2.0.0",
-    "@blockquote/test-runner-mocha-style-reporter": "^1.0.0",
-    "@custom-elements-manifest/analyzer": "^0.5.3",
-    "@custom-elements-manifest/to-markdown": "^0.1.0",
-    "@open-wc/eslint-config": "^7.0.0",
-    "@open-wc/testing": "^3.0.3",
-    "@ungap/global-this": "^0.4.4",
-    "@web/dev-server": "^0.1.25",
-    "@web/rollup-plugin-html": "^1.10.1",
-    "@web/test-runner": "^0.13.23",
-    "@web/test-runner-playwright": "^0.8.8",
-    "@webcomponents/shadycss": "^1.11.0",
-    "@webcomponents/webcomponentsjs": "^2.6.0",
-    "concurrently": "^7.0.0",
-    "eslint": "^8.0.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-log-filenames": "^1.0.4",
-    "husky": "^4.3.8",
-    "lint-staged": "^12.0.0",
-    "prettier": "^2.4.1",
-    "rollup-plugin-copy": "^3.4.0",
-    "rollup-plugin-minify-html-literals": "^1.2.6",
-    "rollup-plugin-summary": "^1.3.0",
-    "sort-package-json": "^1.52.0",
-    "stylelint": "^14.0.0",
-    "stylelint-config-standard-scss": "^3.0.0",
-    "tiny-array-flat-polyfill": "^0.2.1",
-    "vite": "^2.7.0"
+    "@blockquote-web-components/blockquote-base-common-dev-dependencies": "^1.0.0"
   },
   "publishConfig": {
     "access": "public"
