--- a/packages/directives/blockquote-directive-svg-to-data-imageblockquote-directive-svg-to-data-image/package.json
+++ b/packages/directives/blockquote-directive-svg-to-data-imageblockquote-directive-svg-to-data-image/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blockquote-web-components/blockquote-directive-svg-to-data-image",
-  "version": "1.0.0-rc.1",
+  "version": "1.0.0",
   "description": "This directive receives a `Lit SVG Template Result` and returns a data URI string.",
   "keywords": [
     "lit",
