--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "type": "git",
     "url": "https://github.com/oscarmarina/blockquote-web-components"
   },
+  "type": "module",
   "workspaces": {
     "packages": [
       "packages/**/*"
@@ -36,6 +37,9 @@
     "analyze": "lerna run analyze:doc --stream --concurrency 1",
     "test:pre-push": "npm run test -- --since",
     "test:scope": "func() { lerna run test --stream --concurrency 1 --scope @blockquote-web-components/${1}; }; func",
+    "site": "npm run site:prepare && npm run site:copy",
+    "site:prepare": "lerna exec -- rm -rf ./dev && lerna run dev:vite",
+    "site:copy": "rm -rf ./site/**/* && node scripts/move-dev-directory.js",
     "version": "npm run standard"
   },
   "husky": {
@@ -56,6 +60,48 @@
       "npm run format:stylelint -- *"
     ],
     "**/package.json": "npm run format:package -- *"
+  },
+  "eslintConfig": {
+    "parserOptions": {
+      "ecmaVersion": "latest"
+    },
+    "plugins": [
+      "log-filenames"
+    ],
+    "extends": [
+      "@open-wc",
+      "prettier"
+    ],
+    "rules": {
+      "class-methods-use-this": "off",
+      "no-unused-expressions": [
+        "error",
+        {
+          "allowShortCircuit": true,
+          "allowTernary": true
+        }
+      ],
+      "object-curly-newline": "off",
+      "import/extensions": [
+        "error",
+        "always",
+        {
+          "ignorePackages": true
+        }
+      ],
+      "import/no-extraneous-dependencies": [
+        "error",
+        {
+          "devDependencies": [
+            "**/test/**/*.{js,ts}",
+            "**/*.config.{js,ts,mjs,cjs}",
+            "**/*.conf.{js,ts,mjs,cjs}"
+          ]
+        }
+      ],
+      "import/no-unresolved": "off",
+      "import/prefer-default-export": "off"
+    }
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
@@ -89,5 +135,9 @@
     "stylelint-config-standard-scss": "^4.0.0",
     "tslib": "^2.0.0",
     "typescript": "^4.0.0"
+  },
+  "dependencies": {
+    "cheerio": "^1.0.0-rc.12",
+    "recursive-copy": "^2.0.14"
   }
 }
