--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
     "format": "func() { npm run format:eslint $1 && npm run format:prettier $1 && npm run format:stylelint $1; }; func",
     "format:eslint": "func() { eslint --fix --ignore-path .eslintignore \"./packages/**/${1:-*}/**/*.{js,ts,html}\"; }; func",
     "format:package": "func() { sort-package-json \"./packages/**/${1:-*}/**/package.json\"; }; func",
-    "format:prettier": "func() { prettier --write --list-different --ignore-path .eslintignore \"./packages/**/${1:-*}/**/*.{js,ts,json,html,md}\"; }; func",
+    "format:prettier": "func() { prettier --write --list-different --ignore-path .eslintignore \"./packages/**/${1:-*}/**/*.{js,ts,json,html}\"; }; func",
     "format:stylelint": "func() { stylelint --fix --allow-empty-input --ignore-path .eslintignore \"./packages/**/${1:-*}/**/*.{css,scss}\"; }; func",
     "lint": "func() { npm run lint:eslint $1 && npm run lint:prettier $1 && npm run lint:stylelint $1; }; func",
     "lint:eslint": "func() { eslint --ignore-path .eslintignore \"./packages/**/${1:-*}/**/*.{js,ts,html}\"; }; func",
-    "lint:prettier": "func() { prettier --check --ignore-path .eslintignore \"./packages/**/${1:-*}/**/*.{js,ts,json,html,md}\"; }; func",
+    "lint:prettier": "func() { prettier --check --ignore-path .eslintignore \"./packages/**/${1:-*}/**/*.{js,ts,json,html}\"; }; func",
     "lint:stylelint": "func() { stylelint --allow-empty-input --ignore-path .eslintignore \"./packages/**/${1:-*}/**/*.{css,scss}\"; }; func",
     "push": "git push --follow-tags origin main",
     "release": "npm run bootstrap && npm run test:pre-push && lerna version --no-push",
@@ -58,7 +58,7 @@
     "**/*.{js,ts,html}, !site/**/*": [
       "npm run format:eslint -- *"
     ],
-    "**/*.{js,ts,json,html,md}, !site/**/*": [
+    "**/*.{js,ts,json,html}, !site/**/*": [
       "npm run format:prettier -- *"
     ],
     "**/*.{scss,css}": [
@@ -115,19 +115,10 @@
     "@commitlint/cli": "^17.0.2",
     "@commitlint/config-conventional": "^17.0.2",
     "@commitlint/config-lerna-scopes": "^17.0.2",
-    "@open-wc/eslint-config": "^7.0.0",
+    "@open-wc/eslint-config": "^8.0.2",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^8.0.0",
-    "eslint-plugin-html": "^6.0.0",
-    "eslint-plugin-import": "^2.0.0",
-    "eslint-plugin-json": "^3.0.0",
-    "eslint-plugin-lit": "^1.0.0",
-    "eslint-plugin-lit-a11y": "^2.0.0",
-    "eslint-plugin-no-only-tests": "^2.0.0",
-    "eslint-plugin-wc": "^1.0.0",
     "husky": "^4.0.0",
     "karma": "^6.0.0",
     "lerna": "^5.0.0",
@@ -137,7 +128,7 @@
     "sort-package-json": "^1.0.0",
     "standard-version": "^9.0.0",
     "stylelint": "^14.0.0",
-    "stylelint-config-standard-scss": "^4.0.0",
+    "stylelint-config-standard-scss": "^5.0.0",
     "tslib": "^2.0.0",
     "typescript": "^4.0.0"
   },
