--- a/packages/directives/blockquote-directive-svg-to-data-image/package.json
+++ b/packages/directives/blockquote-directive-svg-to-data-image/package.json
@@ -12,6 +12,19 @@
   ],
   "license": "MIT",
   "author": "blockquote-directive-svg-to-data-image",
+  "type": "module",
+  "exports": {
+    ".": {
+      "default": "./index.js"
+    },
+    "./package.json": "./package.json",
+    "./src/BlockquoteDirectiveSvgToDataImage.js": {
+      "default": "./src/BlockquoteDirectiveSvgToDataImage.js"
+    },
+    "./index.js": {
+      "default": "./index.js"
+    }
+  },
   "main": "index.js",
   "module": "index.js",
   "files": [
