--- a/lerna.json
+++ b/lerna.json
@@ -1,11 +1,15 @@
 {
+  "version": "independent",
   "packages": [
     "packages/**/*"
   ],
-  "version": "independent",
-  "npmClient": "yarn",
   "useWorkspaces": true,
   "command": {
+    "bootstrap": {
+      "npmClientArgs": [
+        "--no-package-lock"
+      ]
+    },
     "version": {
       "ammend": true,
       "conventionalCommits": true,
@@ -20,5 +24,6 @@
     "**/*.config.js",
     "**/.*"
   ],
+  "useNx": true,
   "$schema": "node_modules/lerna/schemas/lerna-schema.json"
 }
