--- a/packages/base/blockquote-base-meta/package.json
+++ b/packages/base/blockquote-base-meta/package.json
@@ -135,7 +135,8 @@
     "lit": "^2.0.0"
   },
   "devDependencies": {
-    "@blockquote-web-components/blockquote-base-common-dev-dependencies": "^1.3.13"
+    "@blockquote-web-components/blockquote-base-common-dev-dependencies": "^1.3.13",
+    "@blockquote-web-components/blockquote-base-embedded-webview": "^1.3.0"
   },
   "publishConfig": {
     "access": "public"
