--- a/packages/controllers/blockquote-controller-rxjs/package.json
+++ b/packages/controllers/blockquote-controller-rxjs/package.json
@@ -131,7 +131,8 @@
     "rxjs": "^7.5.5"
   },
   "devDependencies": {
-    "@blockquote-web-components/blockquote-base-common-dev-dependencies": "^1.3.13"
+    "@blockquote-web-components/blockquote-base-common-dev-dependencies": "^1.3.13",
+    "@blockquote-web-components/blockquote-base-embedded-webview": "^1.3.0"
   },
   "publishConfig": {
     "access": "public"
