--- a/packages/directives/blockquote-directive-svg-to-data-image/package.json
+++ b/packages/directives/blockquote-directive-svg-to-data-image/package.json
@@ -144,7 +144,8 @@
     "lit": "^2.0.2"
   },
   "devDependencies": {
-    "@blockquote-web-components/blockquote-base-common-dev-dependencies": "^1.3.13"
+    "@blockquote-web-components/blockquote-base-common-dev-dependencies": "^1.3.13",
+    "@blockquote-web-components/blockquote-base-embedded-webview": "^1.3.0"
   },
   "publishConfig": {
     "access": "public"
