fix(blockquote-base-style-helpers): update dependencies

--- a/packages/base/blockquote-base-style-helpers/package.json
+++ b/packages/base/blockquote-base-style-helpers/package.json
@@ -54,16 +54,9 @@
     "sass:watch": "sass-style-template",
     "sort:package": "npx sort-package-json",
     "start": "concurrently -k -r \"npm:sass:watch\" \"npm:vite\"",
-    "start:wds": "concurrently -k -r \"npm:sass:watch\" \"npm:wds\"",
     "test": "wtr --coverage",
     "test:watch": "wtr --watch",
-    "vite": "vite",
-    "wds": "web-dev-server"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+    "vite": "vite"
   },
   "lint-staged": {
     "**/*.{js,ts,html}": [
@@ -145,7 +138,6 @@
   },
   "dependencies": {
     "@blockquote-web-components/blockquote-base-meta": "^1.0.15",
-    "@blockquote/polymer": "^3.4.1",
     "lit": "^2.0.2"
   },
   "devDependencies": {
