--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,21 +20,20 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Use Node 16
+      - name: Use Node 18
         uses: actions/setup-node@v3
         with:
-          node-version: '16.x'
+          node-version: '18.x'
 
       - name: Setup npm
         run: |
-          npm set scripts-prepend-node-path=true
           npm set "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}"
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Install dependencies
         run: |
-          npx lerna bootstrap --ci
+          npx lerna@6.6.2 bootstrap --ci
 
       - uses: microsoft/playwright-github-action@v1
 
@@ -47,5 +46,5 @@ jobs:
           git config user.name "${{ github.actor }}"
           git config user.email "${{ github.actor }}@users.noreply.github.com"
 
-          npx lerna version --yes
-          npx lerna publish from-package --yes
+          npx lerna@6.6.2 version --yes
+          npx lerna@6.6.2 publish from-package --yes
