--- a/packages/components/blockquote-tabs/package.json
+++ b/packages/components/blockquote-tabs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blockquote-web-components/blockquote-tabs",
-  "version": "1.0.0-rc.1",
+  "version": "1.0.0",
   "description": "Webcomponent blockquote-tabs following open-wc recommendations",
   "keywords": [
     "lit",
@@ -155,14 +155,14 @@
     }
   },
   "dependencies": {
-    "@blockquote-web-components/blockquote-mixin-slot-content": "^1.1.8",
+    "@blockquote-web-components/blockquote-mixin-slot-content": "^1.2.9",
     "@juggle/resize-observer": "^3.4.0",
     "@lit-labs/observers": "^1.1.0",
     "lit": "^2.3.1"
   },
   "devDependencies": {
     "@blockquote-web-components/blockquote-base-common-dev-dependencies": "^1.3.7",
-    "@blockquote-web-components/blockquote-base-embedded-webview": "^1.3.1",
+    "@blockquote-web-components/blockquote-base-embedded-webview": "^1.4.0",
     "@blockquote-web-components/blockquote-foundations-sass": "^1.0.0"
   },
   "publishConfig": {
