fix(blockquote-mixin-slot-content): exports and lighthouse

--- a/packages/mixins/blockquote-mixin-slot-content/package.json
+++ b/packages/mixins/blockquote-mixin-slot-content/package.json
@@ -16,7 +16,9 @@
     ".": {
       "default": "./index.js"
     },
-    "./package.json": "./package.json",
+    "./package.json": {
+      "default": "./package.json"
+    },
     "./src/BlockquoteMixinSlotContent.js": {
       "default": "./src/BlockquoteMixinSlotContent.js"
     },
