fix(blockquote-directive-svg-to-data-image): exports and lighthouse

--- a/packages/directives/blockquote-directive-svg-to-data-image/package.json
+++ b/packages/directives/blockquote-directive-svg-to-data-image/package.json
@@ -17,7 +17,9 @@
     ".": {
       "default": "./index.js"
     },
-    "./package.json": "./package.json",
+    "./package.json": {
+      "default": "./package.json"
+    },
     "./src/BlockquoteDirectiveSvgToDataImage.js": {
       "default": "./src/BlockquoteDirectiveSvgToDataImage.js"
     },
