--- a/packages/controllers/blockquote-controller-rxjs/package.json
+++ b/packages/controllers/blockquote-controller-rxjs/package.json
@@ -14,7 +14,9 @@
     ".": {
       "default": "./index.js"
     },
-    "./package.json": "./package.json",
+    "./package.json": {
+      "default": "./package.json"
+    },
     "./src/BlockquoteControllerRxjs.js": {
       "default": "./src/BlockquoteControllerRxjs.js"
     },
