fix(blockquote-base-style-helpers): exports and lighthouse

--- a/packages/base/blockquote-base-style-helpers/package.json
+++ b/packages/base/blockquote-base-style-helpers/package.json
@@ -14,7 +14,9 @@
     ".": {
       "default": "./index.js"
     },
-    "./package.json": "./package.json",
+    "./package.json": {
+      "default": "./package.json"
+    },
     "./src/getComponentSharedStyles.js": {
       "default": "./src/getComponentSharedStyles.js"
     },
