--- a/packages/base/blockquote-base-meta/package.json
+++ b/packages/base/blockquote-base-meta/package.json
@@ -14,7 +14,9 @@
     ".": {
       "default": "./index.js"
     },
-    "./package.json": "./package.json",
+    "./package.json": {
+      "default": "./package.json"
+    },
     "./src/BlockquoteBaseMeta.js": {
       "default": "./src/BlockquoteBaseMeta.js"
     },
