--- a/lerna.json
+++ b/lerna.json
@@ -1,15 +1,10 @@
 {
   "version": "independent",
-  "packages": [
-    "packages/**/*"
-  ],
+  "packages": ["packages/**/*"],
   "npmClient": "npm",
-  "useWorkspaces": true,
   "command": {
     "bootstrap": {
-      "npmClientArgs": [
-        "--no-package-lock"
-      ]
+      "npmClientArgs": ["--no-package-lock"]
     },
     "version": {
       "ammend": true,
@@ -25,6 +20,5 @@
     "**/*.config.js",
     "**/.*"
   ],
-  "useNx": true,
   "$schema": "node_modules/lerna/schemas/lerna-schema.json"
 }
