--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          npx lerna@6.6.2 bootstrap --ci
+          npm ci --legacy-peer-deps
 
       - name: Install playwright
         run: |
