--- a/packages/base/blockquote-base-style-helpers/package.json
+++ b/packages/base/blockquote-base-style-helpers/package.json
@@ -90,15 +90,23 @@
     "parserOptions": {
       "ecmaVersion": "latest"
     },
-    "plugins": [
-      "log-filenames"
-    ],
     "extends": [
       "@open-wc",
       "prettier"
     ],
     "rules": {
       "class-methods-use-this": "off",
+      "indent": [
+        "error",
+        2,
+        {
+          "SwitchCase": 1,
+          "ignoredNodes": [
+            "PropertyDefinition",
+            "TemplateLiteral > *"
+          ]
+        }
+      ],
       "no-unused-expressions": [
         "error",
         {
@@ -125,7 +133,8 @@
         }
       ],
       "import/no-unresolved": "off",
-      "import/prefer-default-export": "off"
+      "import/prefer-default-export": "off",
+      "lit/no-native-attributes": "off"
     }
   },
   "stylelint": {
@@ -144,7 +153,7 @@
   "devDependencies": {
     "@blockquote-web-components/blockquote-base-common-dev-dependencies": "^1.4.4",
     "@blockquote-web-components/blockquote-base-embedded-webview": "^1.5.2",
-    "lit": "^2.0.2"
+    "lit": "^2.8.0"
   },
   "publishConfig": {
     "access": "public"
